--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "12.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-toastify": "^8.1.0",
     "solidity-coverage": "^0.7.17",
     "web3modal": "^1.9.4"
   },
