--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^10.0.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.1",
+    "gh-pages": "^3.2.3",
     "hardhat": "^2.6.7",
     "ipfs-http-client": "50.1.2",
     "next": "12.0.2",
